--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 mlproject
 *.pdf
-/data
+data/
 src/__pycache__
 src/.DS_Store
 src/data/__pycache__
 src/features/__pycache__
 .DS_Store
 src/data/.DS_Store
-data/processed
-/weights
+weights/
