--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ src/__pycache__
 src/.DS_Store
 src/data/__pycache__
 src/features/__pycache__
+src/models/__pycache__
 .DS_Store
 src/data/.DS_Store
 weights/
