--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,4 @@ data/processed
 weights
 ml_barepass
 notebooks/assignment1/.ipynb_checkpoints
-data/processed/train/X_train.npy
-data/processed/train/y_train.npy
-data/processed/test/X_test.npy
-data/processed/test/y_test.npy
+data/processed
